[project]
name = "calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
    "tqdm>=4.67.1",
]
